Fixes close button display on mobile.
Was previously completely overlapping a bunch of other UI elements and making the UI unusable on mobile.

--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -49,7 +49,7 @@
       margin-block-end: 0.67em;
     }
 
-    .open-button {
+    .close-button {
       grid-column: 1/3;
       grid-row: 2;
       justify-self: end;
@@ -142,24 +142,28 @@
         grid-column: 1;
         grid-row: 1;
       }
-      .left-main {
+      .close-button {
         grid-column: 1;
         grid-row: 2;
+      }
+      .left-main {
+        grid-column: 1;
+        grid-row: 3;
       }
       .inner-grid {
         grid-gap: 8px;
       }
       .right-main {
         grid-column: 1;
-        grid-row: 3;
+        grid-row: 4;
       }
       .confirm-panel {
         grid-column: 1;
-        grid-row: 4;
+        grid-row: 5;
       }
       .footer {
         grid-column: 1;
-        grid-row: 5;
+        grid-row: 6;
       }
     }
   }
